test/files/neg/bug593.check
bug593.scala:1: error: traits or objects may not have parameters
trait Wrapper[T](x : T) {
                ^
one error found
